styles.css
body {
    font-family: Roboto, sans-serif;
    margin: 0;
    overflow: hidden;
    color: white;
}

/* Header */

.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #1F2937;
    padding: 0 25vh;
    height: 50px;
}

.header__logo {
    font-weight: bold;
    font-size: 24px;
    color: #F9FAF8;
}

.header__links ul {
    list-style: none;
    display: flex;
    gap: 16px;
}
.header__links a {
    color: white;
    text-decoration: none;
}

/* Hero */

.hero {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 25vh;
    height: 400px;
    background-color: #1F2937;
}

.hero__left {
    flex: 1;
    padding-right: 32px;
}
.hero__main {
    font-size: 48px;
    font-weight: 900;
    color: #F9FAF8;
}
.hero__secondary {
    font-size: 18px;
    color: #E5E7EB;
    margin: 12px 0;
}
.hero__button {
    background-color: #3882F6;
    border: 1px solid #3882F6;
    color: white;
    font-weight: bold;
    font-size: large;
    border-radius: 8px;
    padding: 8px 32px;
}

.hero__image {
    width: 50%;
    border-radius: 8px;
    object-fit: cover;
}

